// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error slot correctly 1`] = `
<div role="feed"
     class="r-list"
     aria-busy="false"
>
  <div role="button"
       class="r-list__error-text"
       tabindex="0"
  >
    Custom Error
  </div>
  <div class="r-list__placeholder">
  </div>
</div>
`;

exports[`should render finished slot correctly 1`] = `
<div role="feed"
     class="r-list"
     aria-busy="false"
>
  <div class="r-list__finished-text">
    Custom Finished
  </div>
  <div class="r-list__placeholder">
  </div>
</div>
`;
